# fast-api-practice

./: Database.db  Dockerfile  env.py  example.py  main.py  pyproject.toml  start.py
.github/workflows/: cd.yml  ci.yml
apis/: ml_api.py  ping_api.py  todo_api.py  user_api.py
exception/: handlers.py
log/: log.py
logs/: app.log.2025-09-08  app.log.2025-09-10
model/: __init__.py  todo_model.py  user_model.py
schemas/: todo_schema.py  user_schema.py
services/: ml_service.py  todo_service.py  user_service.py
tests/: Database.db  test_example.py
validator/: todo_validator.py  user_validator.py
